# ethio-agri-privacy

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
agents/: crop_planner.py  federated_collaborator.py  local_analyzer.py  privacy_auditor.py  synthesizer.py
benchmarks/: accuracy_eval.py  privacy_eval.py
core/: graph.py  state.py
data/: crop_yields.json
requirements/: base.txt  dev.txt
src/ethio_agri_advisor/: __init__.py  config.py  main.py
src/ethio_agri_advisor/agents/: crop_planner.py  federated_collaborator.py  local_analyzer.py  privacy_auditor.py  synthesizer.py
src/ethio_agri_advisor/core/: graph.py  weather_service.py
src/ethio_agri_advisor/tools/: climate_search.py  privacy_audit.py  translator.py  yield_simulator.py
tests/: test_core.py
tools/: climate_search.py  privacy_engine.py  translator.py
