[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ethio_agri_advisor"
version = "0.1.0"
description = "Privacy-Preserving Multi-Agent Climate-Resilient Farming Advisor"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Aman Atalay", email = "aman.atalay@example.com"}
]
dependencies = [
    "langgraph>=0.0.10",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.3.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "isort",
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
